[package]
name = "stablediffusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["torch-backend"]
torch-backend = ["burn-tch"]
wgpu-backend = ["burn-wgpu"]

[dependencies.burn-tch]
package = "burn-tch"
git = "https://github.com/burn-rs/burn.git"
optional = true

[dependencies.burn-wgpu]
package = "burn-wgpu"
git = "https://github.com/burn-rs/burn.git"
optional = true

[dependencies]
burn = { git = "https://github.com/burn-rs/burn.git" }
serde = {version = "1.0.171", features = ["std", "derive"]}
npy = "0.4.0"
num-traits = "0.2.15"
rust_tokenizers = "8.1.0"
regex = "1.9.1"
image = "0.24.6"
bincode = {version = "2.0.0-alpha.0", features = ["std"]}
cfg-if = "0.1"