[package]
name = "stablediffusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wgpu-backend = ["burn-wgpu"]

[dependencies.burn-wgpu]
package = "burn-wgpu"
version = "0.13.0"
git = "https://github.com/burn-rs/burn.git"
optional = true

[dependencies]
burn = "0.9.0"
burn-ndarray = "0.9.0"
burn-tch = "0.9.0"
burn-autodiff =  "0.9.0"
tch = "0.13.0"
torch-sys = "0.13.0"
serde = {version = "1.0.171", features = ["std", "derive"]}
npy = "0.4.0"
num-traits = "0.2.15"
rust_tokenizers = "8.1.0"
regex = "1.9.1"
image = "0.24.6"
cfg-if = "0.1"
